- "Floor plan" display mode for objects on network map
- Access to zone data in network discovery filters 
- Fixed issues:
	NX-669 (DRBD monitoring is not working in some configurations)
	NX-689 (Pass found SNMP configuration while discovery for new node creation)
	NX-890 (Passive elements in rack)
	NX-1297 (Copying Files inside File Manager using CTRL and Drag&Drop is not working)
	NX-1306 (Show system FQDN in tunnel manager)
	NX-1350 (Invert Values option for performance tab DCIs; Performance tab graph configuration is maintained on double-click)
	NX-1366 (Edit option for "group box" decorations on network maps)
	NX-1369 (Title not displayed for dashboard element "Rack")
	NX-1372 (PING subagent is not working)
	NX-1374 (Element DashboardGroup not displayed in Dashboard perspective)
	NX-1373 (Error message "Error loading RSA keys from ..." in all server-to-agent command line tools)
	NX-1376 (Windows agent reports incorrect OS version on Windows 10)


*
* 2.2.1
*

- Implemented separate access rights for each DCI object
- Option to read log files using VSS snapshots on Windows
- Per stage confirmation in database manager during database check
- Fixed file download cancelation
- HTTPS support in SMSEagle driver
- New network map element - text box
- New debug log format with tags
- Ability to set debug level per tag or tag mask
- Improved audit logging on object creation
- NXSL function "GeoLocation" replaced with "GeoLocation" class constructor
- Optimized object updates in database (to reduce load on database in large installations)
- Thread pool used for data collection instead of fixed number of poller threads
- Optimized data collection from agents
- Configurable number of records per transaction for writing DCI data
- Fixed issues: 
	NX-662 (New network map element - text box)
	NX-703 (Export/Import actions)
	NX-757 (Instance discovery - grace period for removed instances before deleting DCIs)