@@ -24,6 +24,7 @@
 	NX-669 (DRBD monitoring is not working in some configurations)
 	NX-689 (Pass found SNMP configuration while discovery for new node creation)
 	NX-890 (Passive elements in rack)
+	NX-1169 (Encryption is not set by default between agent and server)
 	NX-1297 (Copying Files inside File Manager using CTRL and Drag&Drop is not working)
 	NX-1306 (Show system FQDN in tunnel manager)
 	NX-1350 (Invert Values option for performance tab DCIs; Performance tab graph configuration is maintained on double-click)
